refactor(site): 更新网站图标路径
- 将 favicon 和 apple_touch_icon 的路径从 /static/ 修改为根目录 /
- 更新 label icon 的路径从 /static/ 修改为根目录 /

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,10 +21,10 @@ theme = 'PaperMod'
 [params]
     math = true
     [params.assets]
-        favicon = "/static/favicon.ico"
-        apple_touch_icon = "/static/apple_touch_icon.png"
+        favicon = "/favicon.ico"
+        apple_touch_icon = "/apple_touch_icon.png"
     [params.label]
-        icon = "/static/youkre.svg"
+        icon = "/youkre.svg"
 
 [caches]
     [caches.images]
